--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@bazel/labs": "^1.6.1",
         "@bazel/rollup": "^1.6.1",
         "@bazel/typescript": "^1.6.1",
+        "@types/express": "^4.17.6",
         "@types/google-protobuf": "^3.7.2",
         "@types/node": "^13.13.5",
         "grpc-tools": "^1.8.1",
@@ -22,7 +23,9 @@
         "test": "bazel test //..."
     },
     "dependencies": {
+        "express": "^4.17.1",
         "google-protobuf": "^3.12.0-rc.1",
-        "grpc": "^1.24.2"
+        "grpc": "^1.24.2",
+        "grpc-express": "^1.0.1-beta"
     }
 }
