Add web/, but it doesn't work. Serves as a repro case for a bug report.
ts_devserver doesn't load the protobuf generated code correctly - they
try to `require('google-protobuf')` and that fails with an error in the
AMD code.

--- a/api/BUILD.bazel
+++ b/api/BUILD.bazel
@@ -36,6 +36,7 @@ nodejs_binary(
     name = "dev",
     data = RUNTIME_DEPS,
     entry_point = "api_bundle.js",
+    visibility = ["//:__pkg__"],
 )
 
 nodejs_image(
