--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/google-protobuf": "^3.7.2",
         "@types/node": "^13.13.5",
         "grpc-tools": "^1.8.1",
+        "grpc-web": "^1.0.7",
         "grpc_tools_node_protoc_ts": "^3.0.0",
         "request": "^2.88.2",
         "rollup": "^2.8.2",
@@ -26,6 +27,7 @@
         "express": "^4.17.1",
         "google-protobuf": "^3.12.0-rc.1",
         "grpc": "^1.24.2",
-        "grpc-express": "^1.0.1-beta"
+        "grpc-express": "^1.0.1-beta",
+        "http-proxy-middleware": "^1.0.3"
     }
 }
