--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "vac/*": [
+      "tpt/*": [
         "*",
         "dist/bin/*"
       ]
