--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "@bazel/bazelisk": "latest",
         "@bazel/buildifier": "latest",
         "@bazel/ibazel": "^0.13.0",
-        "@bazel/labs": "^1.6.1",
         "@bazel/rollup": "^1.6.1",
         "@bazel/typescript": "^1.6.1",
         "@types/express": "^4.17.6",
@@ -15,6 +14,7 @@
         "grpc-tools": "^1.8.1",
         "grpc-web": "^1.0.7",
         "grpc_tools_node_protoc_ts": "^3.0.0",
+        "minimist": "^1.2.5",
         "request": "^2.88.2",
         "rollup": "^2.8.2",
         "typescript": "^3.8.3"
@@ -24,6 +24,7 @@
         "test": "bazel test //..."
     },
     "dependencies": {
+        "@bazel/labs": "^1.6.1",
         "express": "^4.17.1",
         "google-protobuf": "^3.12.0-rc.1",
         "grpc": "^1.24.2",
