--- a/server/BUILD.bazel
+++ b/server/BUILD.bazel
@@ -1,3 +1,5 @@
+#load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+
 load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
 load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
 load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
@@ -53,3 +55,21 @@ nodejs_binary(
     visibility = ["//:__pkg__"],
 )
 
+#go_library(
+#    name = "go_default_library",
+#    srcs = ["api.go"],
+#    importpath = "github.com/shepheb/grpc/grpc-web-bazel-ts-example/server",
+#    visibility = ["//visibility:private"],
+#    deps = [
+#        "@com_github_golang_protobuf//proto:go_default_library",
+#        "@org_golang_google_grpc//:go_default_library",
+#        "@org_golang_google_grpc//credentials:go_default_library",
+#        "@org_golang_google_grpc//testdata:go_default_library",
+#    ],
+#)
+#
+#go_binary(
+#    name = "server",
+#    embed = [":go_default_library"],
+#    visibility = ["//visibility:public"],
+#)
