--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "google-protobuf": "^3.12.0-rc.1",
         "grpc": "^1.24.2",
         "grpc-express": "^1.0.1-beta",
-        "http-proxy-middleware": "^1.0.3"
+        "http-proxy-middleware": "^1.0.3",
+        "vue": "^2.6.11"
     }
 }
